--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,9 @@
 compile.on.save=true
-file.reference.ojdbc11.jar=C:\\Users\\XPC\\Desktop\\U\\BD\\LenguajesBD\\ojdbc11.jar
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.ojdbc11.jar=C:\\Users\\ricar\\Desktop\\U\\Lenguajes BD\\Proyecto\\GymBD\\ojdbc11.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\XPC\\AppData\\Roaming\\NetBeans\\18\\build.properties
