--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=GymBD
+application.vendor=ricar
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,13 +33,13 @@ dist.jar=${dist.dir}/GymBD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GymBD
+endorsed.classpath=
 excludes=
 file.reference.ojdbc11.jar=C:\\Users\\ricar\\Desktop\\U\\Lenguajes BD\\Proyecto\\ojdbc11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc11.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.ojdbc11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
