Inventario(productos) y membresias

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GymBD
 endorsed.classpath=
 excludes=
-file.reference.ojdbc11.jar=C:\\Users\\ricar\\Desktop\\U\\Lenguajes BD\\Proyecto\\ojdbc11.jar
+file.reference.ojdbc11.jar=ojdbc11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
